<resources>
    <string name="app_name">eQuip</string>

    <!--Login Fragment-->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="login_failed">Login Failed</string>
    <string name="recover_password">Recover Password</string>
    <string name="error_blank_password_email">Please enter your email and password</string>

    <!-- Create Account Fragment-->
    <string name="register_title">Register for eQuip!</string>
    <string name="email_title">email</string>
    <string name="email_signup_hint">Enter Email Address</string>
    <string name="password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="toast_passwords_do_not_match">Passwords Do Not Match</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="return_to_login">Return to Login Screen</string>
    <!--Confirm Account Fragment-->
    <string name="enter_confirmation_code">Enter confirmation code sent to </string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_failure">Account confirmation failure. Please try again</string>
    <string name="confirmation_success">Account confirmation successful! Now Login with your new account!</string>
    <string name="an_error_occured">An error occured</string>
    <string name="email_already_in_use">Email already in use, please use another.</string>
    <string name="invalid_password">Password is in an invalid form.</string>
    <string name="wrong_code_failure">Code entered is incorrect.</string>
    <string name="code_expired_exception">Code entered has expired</string>
    <string name="resend_email">Resend confirmation code</string>
    <string name="confirmation_resent">Confirmation has been sent</string>

    <!--Dashboard-->
    <string name="post_your_items">Post Your Items</string>

    <!--Drawer Strings-->
    <string name="drawer_search">Search</string>
    <string name="drawer_my_rentals">My Rentals</string>
    <string name="drawer_my_profile">My Profile</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_messages">Messages</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Closed</string>
    <string name="my_equipment">My Equipment</string>
    <string name="drawer_dashboard">Dashboard</string>

    <!--Create Listing Activity-->
    <string name="description_title">Description</string>
    <string name="description_hint">Enter a brief product description</string>
    <string name="add_photos">Add up to 3 photos</string>
    <string name="num_photos_added">Photos added</string>
    <string name="list_item_button">List Item</string>
    <string name="no_photos">You forgot to add a photo!</string>
    <string name="take_photo">Take Photo</string>
    <string name="add_from_phone">Add from phone</string>
    <string name="title_hint">Product Name</string>
    <string name="classification_title">Classification</string>
    <array name="add_photo_options">
        <item>Add From Phone</item>
        <item>Take Photo</item>
    </array>

    <!--Equipment Detail Activity-->
    <string name="contact_info">Contact Information</string>
    <string name="reserve_button">Reserve Item</string>
    <string name="reserved">The owner has been notified of your reservation</string>
    <string name="reserved_by">Reserved by</string>
    <string name="make_reservation_button">Make Reservation</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="equipment_reserved_title">This item has been reserved</string>
    <string name="confirm_reservation_button">Confirm Reservation</string>
    <string name="reservation_confirmed_toast">Reservaton Confirmed</string>
    <!--menu items-->
    <string name="menu_back">back</string>

    <!--My Rentals-->
    <string name="current_rentals_title">Current</string>
    <string name="history_rentals_title">History</string>
    <string name="return_button">Return</string>

    <!--User Detail Activity-->
    <string name="available_rentals_caps">AVAILABLE RENTALS</string>

    <!--Edit Account Activity-->
    <string name="account_display_name">Display Name</string>
    <string name="account_address">Address</string>
    <string name="account_email">Email Address</string>
    <string name="account_phone">Phone Number</string>
    <string name="confirm_changes">Confirm Changes</string>
    <string name="uploading_photo">Uploading Photo</string>

    <!--UserSearch -->
    <string name="search_hint">Search eQuip</string>
    <string name="search_menu_title">Search</string>

    <string name="need_gps_permission">Need GPS permission for getting your location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="com.amazonaws.identity_pool_id" translatable="false">us-east-1_t00ZNIKzL</string>
    <string name="title_activity_my_listings">MyListingsActivity</string>
</resources>
