<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">


        <TextView
            android:id="@+id/enter_email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_confirmation_code"
            android:textColor="@android:color/black"
            android:textSize="18dp" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:id="@+id/confirm_user_code"
        android:inputType="number"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/confirm_user_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resend_email_button"
        android:text="@string/resend_email"
        />

</LinearLayout>
