<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.equip.equip.Fragments.LoginFragment">

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="144dp">

        <EditText
            android:id="@+id/email_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />

        <EditText
            android:id="@+id/password_entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:background="@color/colorAccent"
            android:text="@string/login"/>

        <TextView
            android:layout_marginTop="24dp"
            android:id="@+id/create_account_text"
            android:layout_below="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/create_account" />


    </RelativeLayout>



</LinearLayout>