<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="24dp" />

        <ImageView
            android:id="@+id/account_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/outline_insert_photo_black_48dp"/>

        <LinearLayout
            android:id="@+id/attributes_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            tools:layout_editor_absoluteX="12dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/account_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_display_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/account_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_address"
                    android:inputType="textPostalAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/account_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_email"
                    android:inputType="textEmailAddress" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/account_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_phone"
                    android:inputType="phone" />
            </android.support.design.widget.TextInputLayout>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                android:text="Payment Info"/>

            <!--<com.stripe.android.view.CardInputWidget-->
                <!--android:id="@+id/card_input_widget"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--/>-->

            <Button
                android:id="@+id/manage_payments"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:background="@drawable/curved_button"
                android:backgroundTint="@color/colorAccentDark"
                android:text="Manage Payment Methods"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/confirm_changes"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="64dp"
                android:background="@drawable/curved_button"
                android:backgroundTint="@color/colorAccentDark"
                android:text="@string/confirm_changes"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>
