<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.equip.equip.Activities.EquipmentDetailActivity"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/reservation_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/equipment_picture"
                android:layout_width="match_parent"
                android:layout_height="204dp" />

            <LinearLayout
                android:id="@+id/upper_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/equipment_picture"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <RelativeLayout
                    android:id="@+id/title_container"
                    android:layout_width="match_parent"
                    android:layout_height="96dp">

                    <TextView
                        android:id="@+id/equipment_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/textDark"
                        android:textSize="24sp"
                        tools:text="title" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/available_container"
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <TextView
                        android:id="@+id/available_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="TextView"
                        android:textColor="@color/textGray"
                        android:textSize="14sp"
                        tools:text="@string/available" />
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/divider_container"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_below="@id/upper_container">

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:background="@android:color/darker_gray" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lower_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_container"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <RelativeLayout
                    android:id="@+id/seller_container"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="left|center_vertical" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="72dp"
                        android:layout_toRightOf="@+id/imageView"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/seller_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textColor="@color/textDark"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/seller_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textColor="@color/textGray" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_gravity="right|center_vertical"
                        android:src="@drawable/ic_location_on_black_24dp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/description_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="72dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/description_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description_title"
                        android:textColor="@color/textDark"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/equipment_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/textGray"
                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ut tellus augue. Sed aliquam purus quam, venenatis iaculis neque commodo sed. Nullam vitae mauris arcu. Donec scelerisque nec dolor eget tempor. Suspendisse justo massa, elementum sed eleifend eu, sodales quis mauris. Integer interdum, ipsum sit amet bibendum iaculis, neque lectus tincidunt dolor, quis finibus mi enim fermentum risus. Nullam maximus quam vitae quam consequat fermentum." />

                </LinearLayout>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_below="@+id/lower_container" />

        </RelativeLayout>
    </ScrollView>



    <ru.dimorinny.floatingtextbutton.FloatingTextButton
        android:id="@+id/reserve_item_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:floating_background_color="@color/colorAccentDark"
        app:floating_title="@string/reserve_button"
        app:floating_title_color="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:elevation="8dp"
        />

</RelativeLayout>
